--- a/webpage_deliverable/index.html
+++ b/webpage_deliverable/index.html
@@ -1,3 +1,9 @@
+<!-- To run the page locally:
+      cd webpage_deliverable
+      python -m http.server8000
+      open http://localhost:8000/ on chrome
+      Will not load correctly if you just run the index file. - tisya -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
