colorblind friendly palette

--- a/webpage_deliverable/index.html
+++ b/webpage_deliverable/index.html
@@ -248,6 +248,6 @@
 
   <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script src="main.js"></script>
+  <script src="main.js?v=2"></script>
 </body>
 </html>
