new naviagtion tabs

--- a/webpage_deliverable/index.html
+++ b/webpage_deliverable/index.html
@@ -35,13 +35,15 @@
     <div class="nav__inner">
       <a href="#top" class="brand">Flight Trends</a>
       <div class="nav__links">
-      <a href="#overview">Overview</a>
-      <a href="#routes">Routes Map</a>
-      <a href="#market">Market Share</a>
-      <a href="#methods">Methods</a>
+        <a href="#overview">Overview</a>
+        <a href="#routes">Routes Map</a>
+        <a href="#market">Market Share</a>
+        <a href="#seasonality">Seasonality</a>
+        <a href="#seasonal-capacity">Capacity</a>
+        <a href="#methods">Methods</a>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <!-- Title area -->
   <header id="top" class="hero">
@@ -194,7 +196,7 @@
   </section>
 
   <!-- SEASONAL SCATTER + HISTOGRAM -->
-  <section id="seasonal-capacity" class="section section--alt">
+  <section id="seasonal-capacity" class="section">
     <div class="container">
       <div class="section__head" data-aos="fade-up">
         <div>
