additional comments and doc

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- To run the page locally:
-      cd webpage_deliverable
+      cd project root
       python -m http.server8000
       open http://localhost:8000/ on chrome
       Will not load correctly if you just run the index file. - tisya -->
@@ -22,6 +22,9 @@
   <!-- D3 -->
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
   <script src="https://cdn.jsdelivr.net/npm/topojson-client@3"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
