--- a/index.html
+++ b/index.html
@@ -221,6 +221,40 @@
     </div>
   </section>
 
+  <!-- TRAVEL VOLUME TIMELINE -->
+  <section id="travel-timeline" class="section">
+    <div class="container">
+
+      <div class="section__head" data-aos="fade-up">
+        <div>
+          <p class="kicker">Long-Term Trends</p>
+          <h3>Travel Volume Index with Historical Events</h3>
+          <p class="muted">
+            This annotated timeline highlights how major economic, geopolitical, and industry events
+            shaped U.S. air travel demand over the last two decades.
+          </p>
+        </div>
+        <div class="map-controls">
+          <button class="btn btn--ghost" onclick="downloadPNG('timeline-img')">Save PNG</button>
+        </div>
+      </div>
+
+      <!-- PNG visualization -->
+      <div class="viz-card" data-aos="fade-up">
+        <img id="timeline-img"
+            src="annotated_timeline.png"
+            alt="Annotated Travel Volume Timeline"
+            class="timeline-img">
+      </div>
+
+      <p class="caption">
+        Major historical events—such as 9/11, the Great Recession, industry mergers, and the onset of COVID-19—correspond strongly to spikes and drops in national passenger volume.
+      </p>
+
+    </div>
+  </section>
+
+
   <!-- Methods -->
   <section id="methods" class="section section--alt">
     <div class="container grid-two" data-aos="fade-up">
