initial takeaways sections

--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
     </div>
   </section>
 
+    <section id="viz-takeaways" class="section section--alt">
+    <div class="container" data-aos="fade-up">
+      <h2 class="kicker">Takeaways</h2>
+      <div class="viz-block">
+        <h3>Passenger Flows by Origin (Route Map)</h3>
+        <p>This visualization highlights the busiest routes from a selected airport, allowing users to explore how travel demand shifts by month, year, and destination. The thickest arcs represent the highest-volume routes, and the top three are specially highlighted. The map reveals geographic travel patterns clearly and helps identify dominant origin–destination relationships.</p>
+      </div>
+    </div>
+  </section>
+
   <!-- MARKET SHARE -->
   <section id="market" class="section">
     <div class="container">
@@ -177,6 +187,16 @@
     </div>
   </section>
 
+    <section id="viz-takeaways" class="section section--alt">
+    <div class="container" data-aos="fade-up">
+      <h2 class="kicker">Visualization Takeaways</h2>
+      <div class="viz-block">
+        <h3>Airline Market Share (100% Stacked Area Chart)</h3>
+        <p>The stacked area chart shows how U.S. airline market share has shifted over the last 25 years. Each month is normalized to 100%, making airline comparisons straightforward. Major consolidation trends, volatility during major events, and the dominance of major carriers become visually apparent.</p>
+      </div>
+    </div>
+  </section>
+
   <!-- SEASONAL HEATMAP -->
   <section id="seasonality" class="section section--alt">
     <div class="container">
@@ -195,6 +215,16 @@
 
       <div id="seasonHeatmap" class="viz-card" data-aos="fade-up"></div>
       <p class="caption">Figure 3. Darker colors represent months with higher passenger counts.</p>
+    </div>
+  </section>
+
+  <section id="viz-takeaways" class="section section--alt">
+    <div class="container" data-aos="fade-up">
+      <h2 class="kicker">Visualization Takeaways</h2>
+      <div class="viz-block">
+        <h3>Seasonal Passenger Heatmap</h3>
+        <p>This heatmap reveals seasonal cycles in U.S. air travel, with darker shades showing summer peaks and lighter shades indicating slower months. Dramatic disruptions—including 9/11, the Great Recession, and COVID-19—appear as extremely light periods. This visualization shows long-term recovery and seasonality clearly.</p>
+      </div>
     </div>
   </section>
 
@@ -218,6 +248,16 @@
       <p class="caption">
         Brushing over the scatterplot filters the histogram on the right to show only points from the selected region.
       </p>
+    </div>
+  </section>
+
+  <section id="viz-takeaways" class="section section--alt">
+    <div class="container" data-aos="fade-up">
+      <h2 class="kicker">Visualization Takeaways</h2>
+      <div class="viz-block">
+        <h3>Seasonal Capacity Patterns (Scatter + Histogram)</h3>
+        <p>The scatterplot and histogram show relationships between passenger volume, available seats, and load factor across seasons. Higher-capacity regions tend to reach higher load factors, especially during summer. Brushing enables users to explore how load factor distributions change for specific regions or seasons.</p>
+      </div>
     </div>
   </section>
 
@@ -251,6 +291,16 @@
         Major historical events—such as 9/11, the Great Recession, industry mergers, and the onset of COVID-19—correspond strongly to spikes and drops in national passenger volume.
       </p>
 
+    </div>
+  </section>
+
+  <section id="viz-takeaways" class="section section--alt">
+    <div class="container" data-aos="fade-up">
+      <h2 class="kicker">Visualization Takeaways</h2>
+      <div class="viz-block">
+        <h3>Travel Volume Index with Historical Events</h3>
+        <p>This annotated line chart displays how national air travel volume has changed relative to 1999 levels. Key events such as 9/11, recessions, mergers, and COVID-19 are clearly labeled, illustrating how economic and geopolitical shocks directly influence air travel.</p>
+      </div>
     </div>
   </section>
 
