conclusion and references sections added

--- a/index.html
+++ b/index.html
@@ -304,6 +304,33 @@
     </div>
   </section>
 
+  <!-- CONCLUSION -->
+  <section id="conclusion" class="section section--alt">
+    <div class="container narrow" data-aos="fade-up">
+
+      <p class="kicker">Conclusion</p>
+      <h3>Overall Findings & Insights</h3>
+
+      <p class="conclusion-text">
+        Across our analysis of U.S. air travel from 1999 to 2024, several clear patterns emerged. Passenger flows show that major hub airports consistently sustain strong connections to leisure markets, particularly in warmer regions such as Florida and the Southwest. These hubs act as anchors in the national network, with a small number of high-volume routes accounting for a large share of total passenger movements.
+      </p>
+
+      <p class="conclusion-text">
+        Market share patterns reveal long-term consolidation among U.S. airlines. Mergers—including Delta–Northwest, United–Continental, and American–US Airways—reshaped the competitive landscape, resulting in a small number of carriers holding the majority of domestic demand. While seasonal fluctuations in total traffic are pronounced, especially in summer months, relative carrier share has remained surprisingly stable aside from major disruptive events.
+      </p>
+
+      <p class="conclusion-text">
+        The seasonal passenger heatmap highlights the resilience of the aviation industry. Despite catastrophic declines from 9/11, the Great Recession, and COVID-19, the system consistently recovered to new highs within several years. The load-factor analysis further shows that airlines have become increasingly efficient, with higher utilization of available seats and more consistent performance across seasons.
+      </p>
+
+      <p class="conclusion-text">
+        The long-term travel volume index illustrates how deeply economic and geopolitical events affect mobility in the U.S. While the COVID-19 collapse stands out as the most dramatic shock in modern aviation history, the post-pandemic rebound demonstrates both the essential role of air travel and the industry’s ability to adapt and scale. Overall, the visualizations tell a cohesive story of expansion, operational efficiency, and adaptive recovery—shaped continually by external forces but driven by strong long-term demand for air transportation.
+      </p>
+
+    </div>
+  </section>
+
+
 
   <!-- Methods -->
   <section id="methods" class="section section--alt">
@@ -329,6 +356,31 @@
       </div>
     </div>
   </section>
+
+
+
+    <!-- REFERENCES -->
+  <section id="references" class="section">
+    <div class="container" data-aos="fade-up">
+      <p class="kicker">References</p>
+      <h3>Sources and Further Reading</h3>
+
+      <ul class="reference-list">
+        <li>
+          <a href="https://www.researchgate.net/publication/238753728_An_Analysis_of_Air_Travel_Trends_in_the_United_States" target="_blank">
+            An Analysis of Air Travel Trends in the United States — ResearchGate
+          </a>
+        </li>
+
+        <li>
+          <a href="https://crp.trb.org/acrpwebresource12/understanding-air-service-and-regional-economic-activity/how-has-air-service-changed-over-time/#:~:text=were%20two%20notable%20decreases%3A%20the,surpass%202007%20levels%20until%202015" target="_blank">
+            How Air Service Has Changed Over Time — Airport Cooperative Research Program (ACRP)
+          </a>
+        </li>
+      </ul>
+    </div>
+  </section>
+
 
   <footer class="footer">
     <div class="container">
