--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <!-- Title area -->
   <header id="top" class="hero">
     <div class="container">
-      <p class="kicker" data-aos="fade-up">DS4200 Final Project - Tisya Sharma, Tim Matten, John Dunay</p>
+      <p class="kicker" data-aos="fade-up">DS4200 Final Project - Tisya Sharma, Tim Matten</p>
       <h1 data-aos="fade-up">Major Flight Trends Over the Past 25 Years</h1>
       <p class="lede" data-aos="fade-up">
         How economic shocks and global events shaped U.S. air travel from 1999–2024.
